2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceRuntimeChannel.cs : made some properties in duplex context
	  channel dispatching to internal client.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationContextScope.cs : check null arg.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceRuntimeChannel.cs : return timeouts that are set at
	  dispatch runtime later than its .ctor(). Provide ListenUri too.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* AllEnums.cs : add AddressFilterMode and SupportedAddressingMode.
	* ServiceBehaviorAttribute.cs : added missing properties.

2009-08-11  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientBase.cs : (ChannelBase) now ClientRuntimeChannel demands an
	  explicit address.

2009-08-11  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : use new IOperationInvoker implementation.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceRuntimeChannel.cs : change .ctor() args.
	  Add proxy hook methods that simply calls those in callback
	  ClientRuntimeChannel.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : create callback runtime here, if required.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs : factory was not fully optional. Add
	  contextChannel argument to make room for duplex callback channel.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientProxyGenerator.cs : split client-specific code generation
	  from those common to service callback generation.
	* ServiceProxyGenerator.cs : new file, uses common basis above.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceRuntimeChannel.cs : created derived duplex type.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs : close/abort channels.
	  factory is optional now.

2009-08-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs : unify IChannel field to one.
