@@ -1,5 +1,9 @@
 2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* EndpointAddress.cs : #if !NET_2_1 is removing code too much.
+
+2009-08-17  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* ServiceRuntimeChannel.cs : made some properties in duplex context
 	  channel dispatching to internal client.
 
